test/syc/good/sizeofarray.c
/*
 * Using sizeof() operator with array variable or array type
 */

int a[] = { 1, 2, 3 };
int sza = sizeof(a);
int szi2 = sizeof(int[2]);
