test/syc/bad/declvarfun.c
/*
 * 'foo' is already declared as a different type of symbol.
 * (declare as variable, then as function)
 */

int foo = 1;
void foo(void);
